<resources>
    <string name="app_name">Go Shop!</string>
    <string name="edt_search">   Tìm kiếm</string>
    <string name="nav_my_profile">Thông tin cá nhân</string>
    <string name="nav_history">Lịch sử mua hàng</string>
    <string name="nav_cart">Giỏ hàng</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="nav_system">Hệ thống</string>
    <string name="nav_login">Đăng nhập</string>
    <string name="Navigation_drawer_open">Open navigation drawer</string>
    <string name="Navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Trang chính</string>
    <string name="nav_notification">Thông báo</string>
    <string name="txt_loaisp">Danh mục: </string>
    <string name="txt_sp">Sản phẩm hôm nay: </string>
    <string name="txt_ketnoimang">Mất kết nối Internet!</string>
    <string name="txt_muclistdanhsach">Danh sách</string>
    <string name="txt_chitietsp">Chi tiết sản phẩm</string>
    <string name="txt_titlechitietsp">Mô tả sản phẩm:</string>
    <string name="but_themdiahang">THÊM GIỎ HÀNG</string>
    <string name="txt_gia">Giá:</string>
    <string name="txt_tiente">Đ</string>
    <string name="txt_titlelogin">Đăng nhập ứng dụng</string>
    <string name="txt_titleregister">Đăng kí tài khoản</string>
    <string name="txt_taikhoan">Tài khoản</string>
    <string name="txt_matkhau">Mật khẩu</string>
    <string name="txt_matkhau1">Mật khẩu (6 chữ số)</string>
    <string name="but_login">Đăng nhập</string>
    <string name="but_register">Tạo tài khoản mới</string>
    <string name="txt_or">hoặc</string>
    <string name="txt_titlegoshop">Go shop!</string>
    <string name="txt_username">Họ và tên</string>
    <string name="txt_confirmpass">Xác nhận mật khẩu</string>
    <string name="txt_address">Địa chỉ</string>
    <string name="txt_email">Email</string>
    <string name="txt_email1">Email (@gmail.com)</string>
    <string name="txt_sdt">Số điện thoại</string>
    <string name="txt_messagevalid">Email không đúng hoặc mật khẩu đang dưới 6 kí tự</string>
    <string name="txt_emailexist">Email đã tồn tại</string>
    <string name="txt_registersuccess">Đăng ký thành công!</string>
    <string name="txt_messagehaynhapdu">Hãy nhập đủ thông tin!</string>
    <string name="txt_messagexacnhanpass">Xác nhận mật khẩu không đúng!</string>
    <string name="txt_loginsuccess">Đăng nhập thành công!</string>
    <string name="txt_loginfail">Tài khoản hoặc mật khẩu không đúng!</string>
    <string name="txt_messagedangnhap">Bạn chưa đăng nhập!</string>
    <string name="txt_name_profile">Tên:</string>
    <string name="txt_email_profile">Email:</string>
    <string name="txt_address_profile">Địa chỉ:</string>
    <string name="txt_damua_profile">Bạn đã mua</string>
    <string name="txt_fixprofile">Sửa thông tin</string>
    <string name="txt_sanpham">sản phẩm</string>
    <string name="txt_xacnhansua">Xác nhận sửa</string>
    <string name="txt_thayavatar">Edit</string>
    <string name="but_huy">Huỷ</string>
    <string name="txt_fixsuccess">Sửa thành công!</string>
    <string name="txt_fixfail">Sửa không thành công!</string>
    <string name="txt_messagechinhsua">Chỉnh sửa thông tin</string>
    <string name="txt_messagebanmuonsua">Bạn chắc muốn đổi thông tin chứ?</string>
    <string name="txt_co">Có</string>
    <string name="txt_ko">Không</string>
    <string name="txt_messagethemsp">đã được thêm vào giỏ hàng.</string>
    <string name="txt_messagethemsp1">Đã thêm vào giỏ hàng!</string>
    <string name="txt_tongthanhtoan">Tổng thanh toán:</string>
    <string name="but_muahang">Mua hàng</string>
    <string name="txt_messagesoluongmax">Xin lỗi! Số lượng đã tối đa</string>
    <string name="txt_messagesoluongmin">Xin lỗi! Số lượng đã tối thiểu</string>
    <string name="txt_sdt_profile">Số điện thoại:</string>
    <string name="txt_thanhtoan">Thanh toán</string>
    <string name="txt_diachinhanhang">Địa chỉ nhận hàng</string>
    <string name="but_dathang">Đặt hàng</string>
    <string name="txt_phuongthucvanchuyen">Phương thức vận chuyển</string>
    <string name="txt_vanchuyennhanhquocte">Vận chuyển nhanh quốc tế</string>
    <string name="txt_15000">đ15,000</string>
    <string name="txt_phiship">Phí ship:</string>
    <string name="txt_donvi">đ</string>
    <string name="txt_tongthanhtien">Tổng thành tiền:</string>
    <string name="txt_dathangthanhcong">Đặt hàng thành công</string>
    <string name="txt_ghinhandonhang">Đơn hàng đã được ghi nhận, cảm ơn bạn đã tin tưởng Go Shop!</string>
    <string name="but_tieptucmua">Tiếp tục mua sắm</string>
    <string name="txt_daduocdat">đã được đặt.</string>
    <string name="but_mualai">Mua lại</string>
    <string name="txt_lichsu">Đơn mua</string>
    <string name="txt_danhsachsanpham">Danh sách sản phẩm</string>
    <string name="txt_chuacosp">Chưa có sản phẩm nào trong giỏ!</string>
    <string name="txt_chochut">Chờ chút nhé! ^^</string>
    <string name="txt_dangkiemtra">Đang kiểm tra sản phẩm!</string>
</resources>