<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_my_profile"
            android:title="@string/nav_my_profile" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_carttt"
            android:title="@string/nav_cart" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history" />
    </group>
    <item android:title="@string/nav_system">
        <menu>
            <item
                android:id="@+id/nav_log_in"
                android:icon="@drawable/ic_login"
                android:title="@string/nav_login" />
        </menu>
    </item>
</menu>