<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_background">

        <ImageButton
            android:id="@+id/but_back_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@null"
            android:src="@drawable/ic_back"
            app:tint="@color/custom_nav_bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_titlegoshop"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="italic|bold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:text="@string/txt_titlelogin"
                android:textColor="#505050"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_taikhoan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edt"
                android:drawableLeft="@drawable/ic_user"
                android:hint="@string/txt_email" />

            <EditText
                android:id="@+id/edt_matkhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edt"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/txt_matkhau"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/but_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/custom_but_login"
                android:text="@string/but_login"
                android:textColor="#505050"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/txt_or"
                android:textColor="#505050"
                android:textStyle="italic" />

            <Button
                android:id="@+id/but_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/custom_but_register"
                android:text="@string/but_register"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>