<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MyProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/custom_background">

                <ImageButton
                    android:id="@+id/but_back_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/custom_nav_bottom" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_hinh_profile_avatar"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/icon_shoppingbag"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/txt_ten_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/txt_name_profile"
                android:textColor="#505050"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/txt_email_profile"
                android:textColor="#505050"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txt_diachi_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/txt_address_profile"
                android:textColor="#505050"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txt_sdt_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/txt_sdt_profile"
                android:textColor="#505050"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_damua_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/txt_damua_profile"
                android:textColor="#505050"
                android:textSize="16sp" />

            <Button
                android:id="@+id/but_sua_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_but_login"
                android:text="@string/txt_fixprofile" />

            <Button
                android:id="@+id/but_logout_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_but_logout"
                android:text="@string/nav_logout" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>